--- a/res/layout/activity_recdia.xml
+++ b/res/layout/activity_recdia.xml
@@ -275,7 +275,16 @@
       android:textSize="20sp" />
   
     </LinearLayout>
-      
+
+      <CheckBox
+          android:id="@+id/checkBox8"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="@string/pubmuro"
+          android:textColor="#8d665f"
+          android:textSize="20sp" />
+   
 <Button
     android:id="@+id/button3"
     style="?android:attr/buttonStyleSmall"
