--- a/res/layout/activity_recdia.xml
+++ b/res/layout/activity_recdia.xml
@@ -300,6 +300,21 @@
     android:textColor="#ffffff"
     android:textSize="22sp" />
 
+<Button
+    android:id="@+id/button5"
+    style="?android:attr/buttonStyleSmall"
+    android:layout_width="180dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="10dp"
+    android:layout_weight="1"
+    android:background="@drawable/b1"
+    android:onClick="onclickdev"
+    android:text="@string/dev"
+    android:textColor="#ffffff"
+    android:textSize="22sp" />
+
 </LinearLayout>
 
 
