--- a/res/layout/activity_calendario_activity2.xml
+++ b/res/layout/activity_calendario_activity2.xml
@@ -3,12 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffe2d8" >
+    
+    <FrameLayout
+        android:id="@+id/fl1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="#ffe2d8"
     android:orientation="vertical" >
+    
+    
+       
     
     <LinearLayout
         android:layout_width="fill_parent"
@@ -53,6 +61,7 @@
    
      </LinearLayout>
 
+   
     <GridView
         android:id="@+id/gridView1"
         android:layout_width="fill_parent"
@@ -103,6 +112,14 @@
 
 </LinearLayout>
 
+     <ProgressBar
+         android:id="@+id/progressBar1"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:visibility="gone" />
+
+    </FrameLayout>
     
 
 
