--- a/res/layout/fragment_registro.xml
+++ b/res/layout/fragment_registro.xml
@@ -1,4 +1,3 @@
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,11 +5,11 @@
     android:onClick="onclickdevo"
     android:orientation="vertical" >
    
-    
 <LinearLayout
     android:id="@+id/LinearLayout01"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#ffe2d8"
     android:orientation="vertical" >
 
      <LinearLayout
@@ -25,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dialabel"
+            android:textColor="#8d665f"
             android:textSize="22sp" />
 
   <TextView
@@ -33,6 +33,7 @@
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
       android:text="@string/fechalabel"
+      android:textColor="#8d665f"
       android:textSize="22sp" />
     
          </LinearLayout>
@@ -89,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lecbiblilabel"
+            android:textColor="#8d665f"
             android:textSize="22sp" />
 
         <EditText
@@ -97,6 +99,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/hintlb"
+            android:textColor="#8d665f"
+            android:textColorHint="#8d665f"
             android:textSize="16sp" >
 
             <requestFocus />
@@ -111,6 +115,7 @@
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_horizontal_margin"
              android:text="@string/hablolabel"
+             android:textColor="#8d665f"
              android:textSize="22sp" />
 
          <EditText
@@ -119,6 +124,7 @@
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textMultiLine"
+             android:textColor="#8d665f"
              android:textSize="16sp" />
 
          <CheckBox
@@ -127,6 +133,7 @@
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_horizontal_margin"
              android:text="@string/cbolabel"
+             android:textColor="#8d665f"
              android:textSize="22sp" />
    
   <CheckBox
@@ -134,6 +141,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cboilabel"
+      android:textColor="#8d665f"
       android:textSize="22sp" />
 
   <ProgressBar
@@ -159,6 +167,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/adglabel"
+             android:textColor="#8d665f"
              android:textSize="22sp" />
 
          <EditText
@@ -167,6 +176,7 @@
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textMultiLine"
+             android:textColor="#8d665f"
              android:textSize="16sp" />
       
     </LinearLayout>
@@ -181,6 +191,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ldnlabel"
+             android:textColor="#8d665f"
              android:textSize="22sp" />
 
          <EditText
@@ -189,6 +200,7 @@
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textMultiLine"
+             android:textColor="#8d665f"
              android:textSize="16sp" />
       
     </LinearLayout>
@@ -204,6 +216,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/pilabel"
+             android:textColor="#8d665f"
              android:textSize="22sp" />
 
          <EditText
@@ -212,6 +225,7 @@
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="textMultiLine"
+             android:textColor="#8d665f"
              android:textSize="16sp" />
       
     </LinearLayout>
@@ -227,6 +241,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/plcblabel"
+      android:textColor="#8d665f"
       android:textSize="20sp" />
         
   <CheckBox
@@ -234,6 +249,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cbcoordlabel"
+      android:textColor="#8d665f"
       android:textSize="20sp" />
   
     </LinearLayout>
@@ -248,6 +264,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/mdgccblabel"
+      android:textColor="#8d665f"
       android:textSize="20sp" />
   
     </LinearLayout>
@@ -263,6 +280,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cbdisclabel"
+      android:textColor="#8d665f"
       android:textSize="20sp" />
         
   <CheckBox
@@ -270,6 +288,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cboplclabel"
+      android:textColor="#8d665f"
       android:textSize="20sp" />
   
     </LinearLayout>
