--- a/res/layout/fragment_registro.xml
+++ b/res/layout/fragment_registro.xml
@@ -134,7 +134,8 @@
              android:layout_marginTop="@dimen/activity_horizontal_margin"
              android:text="@string/cbolabel"
              android:textColor="#8d665f"
-             android:textSize="22sp" />
+             android:textSize="20sp"
+             android:visibility="gone" />
    
   <CheckBox
       android:id="@+id/checkBox7"
@@ -142,7 +143,8 @@
       android:layout_height="wrap_content"
       android:text="@string/cboilabel"
       android:textColor="#8d665f"
-      android:textSize="22sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
 
   <ProgressBar
       android:id="@+id/progressBar1"
@@ -156,6 +158,18 @@
       android:minHeight="30dp"
       android:minWidth="30dp"
       android:visibility="invisible" />
+
+  <ToggleButton
+      android:id="@+id/toggleButton1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/activity_horizontal_margin"
+      android:layout_weight="1"
+      android:background="@drawable/b1off"
+      android:onClick="onclicktb"
+      android:textColor="#ffffff"
+      android:textOff="@string/tbtext"
+      android:textOn="@string/tbtext" />
       
         <LinearLayout
             android:layout_width="fill_parent"
@@ -166,18 +180,22 @@
              android:id="@+id/textView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:layout_marginTop="@dimen/activity_vertical_margin"
              android:text="@string/adglabel"
              android:textColor="#8d665f"
-             android:textSize="22sp" />
+             android:textSize="20sp"
+             android:visibility="gone" />
 
          <EditText
              android:id="@+id/editText3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
+             android:layout_marginTop="@dimen/activity_vertical_margin"
              android:ems="10"
              android:inputType="textMultiLine"
              android:textColor="#8d665f"
-             android:textSize="16sp" />
+             android:textSize="16sp"
+             android:visibility="gone" />
       
     </LinearLayout>
     
@@ -192,7 +210,8 @@
              android:layout_height="wrap_content"
              android:text="@string/ldnlabel"
              android:textColor="#8d665f"
-             android:textSize="22sp" />
+             android:textSize="20sp"
+             android:visibility="gone" />
 
          <EditText
              android:id="@+id/editText4"
@@ -201,7 +220,8 @@
              android:ems="10"
              android:inputType="textMultiLine"
              android:textColor="#8d665f"
-             android:textSize="16sp" />
+             android:textSize="16sp"
+             android:visibility="gone" />
       
     </LinearLayout>
     
@@ -217,7 +237,8 @@
              android:layout_height="wrap_content"
              android:text="@string/pilabel"
              android:textColor="#8d665f"
-             android:textSize="22sp" />
+             android:textSize="20sp"
+             android:visibility="gone" />
 
          <EditText
              android:id="@+id/editText5"
@@ -226,7 +247,8 @@
              android:ems="10"
              android:inputType="textMultiLine"
              android:textColor="#8d665f"
-             android:textSize="16sp" />
+             android:textSize="16sp"
+             android:visibility="gone" />
       
     </LinearLayout>
       
@@ -242,7 +264,8 @@
       android:layout_height="wrap_content"
       android:text="@string/plcblabel"
       android:textColor="#8d665f"
-      android:textSize="20sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
         
   <CheckBox
       android:id="@+id/checkBox2"
@@ -250,7 +273,8 @@
       android:layout_height="wrap_content"
       android:text="@string/cbcoordlabel"
       android:textColor="#8d665f"
-      android:textSize="20sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
   
     </LinearLayout>
 
@@ -265,7 +289,8 @@
       android:layout_height="wrap_content"
       android:text="@string/mdgccblabel"
       android:textColor="#8d665f"
-      android:textSize="20sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
   
     </LinearLayout>
     
@@ -281,7 +306,8 @@
       android:layout_height="wrap_content"
       android:text="@string/cbdisclabel"
       android:textColor="#8d665f"
-      android:textSize="20sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
         
   <CheckBox
       android:id="@+id/checkBox5"
@@ -289,7 +315,8 @@
       android:layout_height="wrap_content"
       android:text="@string/cboplclabel"
       android:textColor="#8d665f"
-      android:textSize="20sp" />
+      android:textSize="20sp"
+      android:visibility="gone" />
   
     </LinearLayout>
 
@@ -297,10 +324,12 @@
           android:id="@+id/checkBox8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/activity_vertical_margin"
           android:layout_weight="1"
           android:text="@string/pubmuro"
           android:textColor="#8d665f"
-          android:textSize="20sp" />
+          android:textSize="20sp"
+          android:visibility="gone" />
    
 <Button
     android:id="@+id/button3"
@@ -309,26 +338,10 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|center_horizontal"
     android:layout_marginBottom="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="@dimen/activity_horizontal_margin"
     android:layout_weight="1"
     android:background="@drawable/b1"
     android:onClick="onclickguardar"
     android:text="@string/guargarblabel"
-    android:textColor="#ffffff"
-    android:textSize="22sp" />
-
-<Button
-    android:id="@+id/button5"
-    style="?android:attr/buttonStyleSmall"
-    android:layout_width="180dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="10dp"
-    android:layout_weight="1"
-    android:background="@drawable/b1"
-    android:onClick="onclickdev"
-    android:text="@string/dev"
     android:textColor="#ffffff"
     android:textSize="22sp" />
 
