--- a/res/layout/activity_muro.xml
+++ b/res/layout/activity_muro.xml
@@ -16,7 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="#00000000" >
+        android:background="#00000000"
+        
+        >
 
     </ListView>
 
