--- a/res/layout/activity_recdia_activity2.xml
+++ b/res/layout/activity_recdia_activity2.xml
@@ -12,7 +12,7 @@
         
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="wrap_content"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
@@ -26,7 +26,7 @@
 
   <TextView
       android:id="@+id/textView11"
-      android:layout_width="wrap_content"
+      android:layout_width="20dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
