--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -14,7 +14,7 @@
         android:textSize="22sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
@@ -24,7 +24,7 @@
         android:textSize="22sp" />
     
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -35,7 +35,7 @@
         android:textSize="22sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewtxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
