--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/textViewt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/emaillabel"
@@ -53,7 +53,7 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewtxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/contrasenialab"
@@ -128,7 +128,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textViewv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
