--- a/res/layout/activity_niveles.xml
+++ b/res/layout/activity_niveles.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -16,7 +16,7 @@
         android:textColor="#8d665f" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewtxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
