--- a/res/layout/activity_recdia.xml
+++ b/res/layout/activity_recdia.xml
@@ -21,7 +21,7 @@
          android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewv6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dialabel"
@@ -29,7 +29,7 @@
             android:textSize="22sp" />
 
   <TextView
-      android:id="@+id/textView9"
+      android:id="@+id/textViewv7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -87,7 +87,7 @@
         android:layout_weight="1" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lecbiblilabel"
@@ -111,7 +111,7 @@
          </LinearLayout>
     
          <TextView
-             android:id="@+id/textView4"
+             android:id="@+id/textViewv2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_horizontal_margin"
@@ -178,7 +178,7 @@
             android:layout_weight="1" >
  
          <TextView
-             android:id="@+id/textView5"
+             android:id="@+id/textViewv3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -206,7 +206,7 @@
             android:layout_weight="1" >
  
          <TextView
-             android:id="@+id/textView6"
+             android:id="@+id/textViewv4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ldnlabel"
@@ -233,7 +233,7 @@
             android:layout_weight="1" >
  
          <TextView
-             android:id="@+id/textView7"
+             android:id="@+id/textViewv5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/pilabel"
