--- a/res/layout/activity_recdia_activity2.xml
+++ b/res/layout/activity_recdia_activity2.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal" >
         
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textViewv8"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -25,7 +25,7 @@
             android:textSize="22sp" />
 
   <TextView
-      android:id="@+id/textView11"
+      android:id="@+id/textViewv9"
       android:layout_width="20dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
