--- a/res/layout/activity_recdia_activity2.xml
+++ b/res/layout/activity_recdia_activity2.xml
@@ -4,6 +4,7 @@
     android:background="#ffe2d8"
     android:orientation="vertical" >
 
+ 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,20 +45,30 @@
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="3dp"
-         android:layout_marginBottom="5dp"
          android:background="#8d665f"
          android:orientation="horizontal" >
 
   </LinearLayout>
-    
-    
-    
-    
-    <FrameLayout
+
+     <FrameLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent" >
+     
+     <FrameLayout
         android:id="@+id/fragments_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
 
+               
     </FrameLayout>
-
+           
+           <ProgressBar
+               android:id="@+id/progressBar1"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center"
+               android:visibility="gone" />
+           
+   </FrameLayout>
+    
 </LinearLayout>
