--- a/res/layout/fragment_registro.xml
+++ b/res/layout/fragment_registro.xml
@@ -164,6 +164,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
+      android:layout_marginTop="@dimen/activity_horizontal_margin"
       android:layout_weight="1"
       android:background="@drawable/b1off"
       android:onClick="onclicktb"
