Mejoras en Layout Rendering

--- a/res/menu/calendario_activity2.xml
+++ b/res/menu/calendario_activity2.xml
@@ -3,16 +3,14 @@
     <item android:id="@+id/item2" android:title="@string/insmenu"></item>
     <item android:id="@+id/item3" android:title="@string/acerca"></item>
     
-    
-    
     <item android:id="@+id/mur"
       android:icon="@drawable/muro"
       android:title="@string/mur"
-      android:showAsAction="ifRoom" />
+      android:showAsAction="always" />
     
     <item android:id="@+id/shr"
       android:icon="@drawable/s"
       android:title="@string/COMP"
-      android:showAsAction="ifRoom" />
+      android:showAsAction="always" />
 
 </menu>
