--- a/res/layout/activity_calendario_activity2.xml
+++ b/res/layout/activity_calendario_activity2.xml
@@ -15,9 +15,6 @@
     android:background="#ffe2d8"
     android:orientation="vertical" >
     
-    
-       
-    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
@@ -39,8 +36,8 @@
          android:layout_width="75dp"
          android:layout_height="30dp"
          android:layout_gravity="center_vertical|center_horizontal"
-         android:layout_marginLeft="40dp"
          android:layout_weight="3"
+         android:gravity="center"
          android:textColor="#8d665f"
          android:textSize="20sp" />
     
@@ -49,7 +46,8 @@
         android:layout_width="40dp"
         android:layout_height="30dp"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_weight="3"
+        android:layout_weight="4"
+        android:gravity="center"
         android:textColor="#8d665f"
         android:textSize="20sp" />
      
@@ -65,31 +63,27 @@
    
      </LinearLayout>
 
-   
-    <GridView
-        android:id="@+id/gridView1"
-        android:layout_width="fill_parent"
-        android:layout_height="400dp"
-        android:background="#ffe2d8"
-        android:numColumns="7"
-        android:scrollbars="none" >
+<GridView
+    android:id="@+id/gridView1"
+    android:layout_width="fill_parent"
+    android:layout_height="400dp"
+    android:background="#ffe2d8"
+    android:numColumns="7"
+    android:scrollbars="none" >
 
    </GridView>
-    
+
 <Button
     android:id="@+id/button1"
     style="?android:attr/borderlessButtonStyle"
     android:layout_width="260dp"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:layout_gravity="center"
-    android:layout_marginLeft="0dp"
     android:background="@drawable/b1"
     android:onClick="onclickgenrepo"
     android:text="@string/crblabel"
     android:textColor="#ffffff"
     android:textSize="22sp" />
-
-
 
 </LinearLayout>
 
