--- a/res/layout/activity_muro.xml
+++ b/res/layout/activity_muro.xml
@@ -1,25 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rl"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colormem"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MuroActivity" >
-
+    android:background="#ffe2d8"
+    android:orientation="vertical" >
+    
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="#00000000"
-        
+        android:background="#ffe2d8" 
+       
         >
 
     </ListView>
 
-</RelativeLayout>
+  
+    
+    
+    
+    
+
+</LinearLayout>
