--- a/res/layout/activity_reporte.xml
+++ b/res/layout/activity_reporte.xml
@@ -5,9 +5,13 @@
     android:fillViewport="true"
     android:orientation="vertical" >
 
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+
 <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:background="#ffe2d8"
     android:orientation="vertical" >
 
@@ -94,6 +98,8 @@
              android:textSize="22sp"
              android:textStyle="bold" />
 
+         
+
          <RadioGroup
              android:id="@+id/radioSINO"
              android:layout_width="fill_parent"
@@ -149,4 +155,14 @@
         android:textSize="22sp" />
 
 </LinearLayout>
+
+<ProgressBar
+    android:id="@+id/progressBar1"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_gravity="center"
+    android:visibility="gone" />
+
+</FrameLayout>
+
 </ScrollView>
