--- a/res/layout/activity_recdia_activity2.xml
+++ b/res/layout/activity_recdia_activity2.xml
@@ -64,8 +64,8 @@
            
            <ProgressBar
                android:id="@+id/progressBar1"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="80dp"
+               android:layout_height="80dp"
                android:layout_gravity="center"
                android:visibility="gone" />
            
