--- a/res/layout/fragment_registro.xml
+++ b/res/layout/fragment_registro.xml
@@ -5,10 +5,14 @@
     android:onClick="onclickdevo"
     android:orientation="vertical" >
    
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+    
 <LinearLayout
     android:id="@+id/LinearLayout01"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:background="#ffe2d8"
     android:orientation="vertical" >
 
@@ -35,7 +39,8 @@
       android:text="@string/fechalabel"
       android:textColor="#8d665f"
       android:textSize="22sp" />
-    
+
+  
          </LinearLayout>
         
            <LinearLayout
@@ -146,18 +151,7 @@
       android:textSize="20sp"
       android:visibility="gone" />
 
-  <ProgressBar
-      android:id="@+id/progressBar1"
-      style="?android:attr/progressBarStyleLarge"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_vertical|center_horizontal"
-      android:layout_weight="1"
-      android:maxHeight="40dp"
-      android:maxWidth="40dp"
-      android:minHeight="30dp"
-      android:minWidth="30dp"
-      android:visibility="invisible" />
+  
 
   <ToggleButton
       android:id="@+id/toggleButton1"
@@ -348,7 +342,14 @@
 
 </LinearLayout>
 
-
+ <ProgressBar
+     android:id="@+id/progressBar1"
+     android:layout_width="80dp"
+     android:layout_height="80dp"
+     android:layout_gravity="center"
+     android:visibility="gone" />
+ 
+ </FrameLayout>
 
 </ScrollView>
 
