--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -3,11 +3,14 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical" >
+<FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
 <LinearLayout
     android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="#ffe2d8"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -76,18 +79,6 @@
         
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar1"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:maxHeight="40dp"
-            android:maxWidth="40dp"
-            android:minHeight="40dp"
-            android:minWidth="40dp"
-            android:visibility="invisible" />
         
         <Button
             android:id="@+id/button1"
@@ -140,5 +131,14 @@
             android:textColor="#8d665f" />
     
 </LinearLayout>
+
+<ProgressBar
+    android:id="@+id/progressBar1"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_gravity="center"
+    android:visibility="gone" />
+
+</FrameLayout>
 
 </ScrollView>
