--- a/res/layout/activity_muro.xml
+++ b/res/layout/activity_muro.xml
@@ -1,23 +1,30 @@
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#ffe2d8"
     android:orientation="vertical" >
+
     
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffe2d8" 
-       
-        >
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#ffe2d8" >
 
     </ListView>
 
   
-    
+  </LinearLayout>
     
     
     
 
-</LinearLayout>
+
+
+
+
+
