POTRAIT MAIN+BUG FIX WIDGET+REFRESH WIDGET+GESTURE

--- a/res/xml/widget_info.xml
+++ b/res/xml/widget_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" android:minHeight="48dp" android:initialLayout="@layout/widget_qmhd" android:minWidth="300dp" android:updatePeriodMillis="180000" android:resizeMode="horizontal|vertical">
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android" android:minHeight="48dp" android:initialLayout="@layout/widget_qmhd" android:minWidth="300dp" android:updatePeriodMillis="1800000" android:resizeMode="horizontal|vertical">
     
 
 </appwidget-provider>
