--- a/res/menu/calendario_activity2.xml
+++ b/res/menu/calendario_activity2.xml
@@ -1,7 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/item1" android:title="@string/usuario"></item>
     <item android:id="@+id/item2" android:title="@string/insmenu"></item>
+    <item android:id="@+id/puntaje" android:title="@string/puntajem"></item>
     <item android:id="@+id/item3" android:title="@string/acerca"></item>
+    
+    
     
     <item android:id="@+id/mur"
       android:icon="@drawable/muro"
@@ -12,5 +15,6 @@
       android:icon="@drawable/s"
       android:title="@string/COMP"
       android:showAsAction="always" />
+    
 
 </menu>
